--- a/02_calculator(no button)/css/calculator.css
+++ b/02_calculator(no button)/css/calculator.css
@@ -23,7 +23,7 @@ body {
   Meiryo,
   sans-serif;
   background: #EEEEEE;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 /*******************************************************/
 /* ヘッダー                                             */
@@ -157,3 +157,4 @@ font-size: 1.5em;
 background: rgb(26, 212, 212);
 cursor: pointer; /*カーソルをポインターの形（かたち）にする*/
 }
+
