--- a/02_calculator/css/calculator.css
+++ b/02_calculator/css/calculator.css
@@ -26,7 +26,7 @@ body {
     Meiryo,
     sans-serif;
   background: #EEEEEE;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 /*******************************************************/
@@ -174,3 +174,4 @@ font-size: 1.5em;
 background: rgb(26, 212, 212);
 cursor: pointer; /*カーソルをポインターの形（かたち）にする*/
 }
+
