--- a/09_omikuji/css/omikuji.css
+++ b/09_omikuji/css/omikuji.css
@@ -163,4 +163,31 @@ footer>p {
         color: bisque;
     }
 
+
+}
+
+.back {
+    position: fixed;  
+    top: 10px;        
+    left: 10px;      
+    z-index: 10001;    
+}
+
+#btn99 {
+    padding: 0.5em 1em;
+    border-radius: 0.3em;
+    color: whitesmoke;           
+    font-size: 1.5em;
+    background: rgb(26, 212, 212);
+    border: none;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#btn99:hover {
+    background: rgb(0, 180, 255); 
+}
+
+#btn99:active {
+    transform: translateY(2px);   
 }
