--- a/10b_omikuji/css/omikuji.css
+++ b/10b_omikuji/css/omikuji.css
@@ -219,4 +219,30 @@ footer>p {
     #omikujiText {
         margin: 30px;
     }
+
+}
+.back {
+    position: fixed;  
+    top: 10px;        
+    left: 10px;      
+    z-index: 10001;    
+}
+
+#btn99 {
+    padding: 0.5em 1em;
+    border-radius: 0.3em;
+    color: whitesmoke;           
+    font-size: 1.5em;
+    background: rgb(26, 212, 212);
+    border: none;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#btn99:hover {
+    background: rgb(0, 180, 255); 
+}
+
+#btn99:active {
+    transform: translateY(2px);   
 }
