--- a/02_calculator(no button)/css/calculator.css
+++ b/02_calculator(no button)/css/calculator.css
@@ -36,6 +36,17 @@ h1 {
 /*******************************************************/
 /* 計算機全体                                           */
 /*******************************************************/
+.back{
+    text-align: left;
+}
+#btn99{
+padding: 0.5em;
+border-radius: 0.3em;
+color: whitesmoke;
+font-size: 1.5em;
+background: rgb(26, 212, 212);
+cursor: pointer; /*カーソルをポインターの形（かたち）にする*/
+}
 .wrapper {
   position: relative;/*相対位置*/
   max-width: 100vw;  /*すべての要素をbox-sizing:border-boxとしているので全て含めてmin-width:100vwに*/
@@ -146,31 +157,6 @@ footer> p {
 	}
 
 }
-.back {
-  position: fixed;      
-  top: 10px;           
-  left: 10px;          
-  z-index: 99999;       
-}
 
-#btn99 {
-  padding: 0.5em 1em;
-  border-radius: 0.3em;
-  color: whitesmoke;
-  font-size: 1.5em;
-  background: rgb(26, 212, 212);
-  border: none;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-/* hover + click effect */
-#btn99:hover {
-  background: rgb(0, 180, 255);
-}
-
-#btn99:active {
-  transform: translateY(2px);
-}
 
 
